Fix issue with model header images not matching on mobile

--- a/docs/src/components/modelHeaderImage/modelHeaderImage.module.scss
+++ b/docs/src/components/modelHeaderImage/modelHeaderImage.module.scss
@@ -2,6 +2,7 @@ $gap: 20px;
 
 .modelHeaderImage {
   width: calc(100% + var(--ifm-spacing-horizontal));
+  max-width: 100%;
   display: flex;
   height: 256px;
   justify-content: center;
@@ -12,11 +13,11 @@ $gap: 20px;
   & img {
       height: 256px;
       object-fit: cover;
+      object-position: center;
+      max-width: calc(50% - ($gap / 2));
 
       &.oversized {
         object-fit: none;
-        object-position: center;
-        max-width: calc(50% - ($gap / 2));
       }
     }
 }
